# olsen

./: .env.example  .gitignore  CODEX.md  Makefile  README.md  pyproject.toml
configs/: v0.2.json
olsen/: backtest.py  cli.py  config.py  dashboard.py  db.py  execution.py  experiment.py  features.py  history.py  kraken.py  model.py  paper.py  websocket.py
olsen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_execution.py  test_features.py  test_history.py  test_paper.py  test_services.py  test_walk_forward.py
