[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "olsen"
version = "0.2.0"
description = "Kraken-first ML trading research and paper-trading system"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "scikit-learn>=1.5,<2",
  "joblib>=1.4,<2",
  "pydantic-settings>=2.4,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "websockets>=13,<17"
]
services = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1", "websockets>=13,<17"]

[project.scripts]
olsen = "olsen.cli:app"

[tool.setuptools.packages.find]
include = ["olsen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
